[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -17,7 +17,7 @@
     <div>
         Today's date
     </div>
-    
+    <div>
     <p>
         This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
     </p>
@@ -27,5 +27,6 @@
     <p>
         This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
     </p>
+    </div>
 </body>
 </html>
