--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -20,14 +20,8 @@
     </div>
     <div>
     <p>
-        This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
-    </p>
-    <p>
-        This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
-    </p>
-    <p>
-        This is article one.This is article one.This is article one.This is article one.This is article one.This is article one.
-    </p>
+        This is my first article.
+     </p>
     </div>
 </body>
 </html>
