--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,9 +6,8 @@
     <meta name = "viewport" content = "width-device-width, initial-scale = 1"/>
 </head>
 <body>
-    <div>
+    <div class = "container">
         <a href = "/">Home</a> 
-    </div>
     <hr/>
     
     <h3>
@@ -22,6 +21,7 @@
     <p>
         This is my first article.
      </p>
+    </div>
     </div>
 </body>
 </html>
