[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am Bharath and this is my first webapp.
         </div>
         <script>
-            alert('Hi, I\'m Javascript!');
+            alert('Hi, You do not want to click ok!');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
